Completed documentation for BinarySearchTree.java.